--- a/index.html
+++ b/index.html
@@ -10,9 +10,19 @@
     <!--Go to https://console.firebase.google.com-->
     <!--Sign in and add a project "fireMessage"-->
     <!--PASTE SNIPPET HERE-->
-
-
-
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
+    <script>
+    // Initialize Firebase
+    var config = {
+        apiKey: "AIzaSyBkmSRfRc7gQF-y-4Cqhh2LCksC5p4ttKA",
+        authDomain: "firemessage-e0ec4.firebaseapp.com",
+        databaseURL: "https://firemessage-e0ec4.firebaseio.com",
+        projectId: "firemessage-e0ec4",
+        storageBucket: "firemessage-e0ec4.appspot.com",
+        messagingSenderId: "984160139887"
+    };
+    firebase.initializeApp(config);
+    </script>
 
     <!--jquery-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
